Post Database Style
Took some time away from database work to revisit some lingering style
issues such as the about page and fonts.

The Steelfish and Helvetica Neue Light fonts aren’t being read by my
browser, so the Google font Oswald and a light sans serif are filling
in for the time being. Too bad there are drastic sizing differences
between the two type sets, so a lot of my typography is at 80% right
now.

--- a/assets/css/3-modules/_authen.sass
+++ b/assets/css/3-modules/_authen.sass
@@ -8,6 +8,7 @@ input
     width: 300px
     border-radius: 3px
     border: 1px solid #eee
+    font-size: 20px
 
 input
   &[type="submit"]
@@ -20,7 +21,16 @@ input
     border-radius: 3px
     cursor: pointer
     background-color: $du-p-red
+    font-size: 20px
 
   &[type="submit"]:hover
       background-color: darken($du-p-red, 20%)
       transition: all 0.3s ease 0s
+
+textarea
+  font-size: 15px
+  font-family: sans-serif
+  /*font-family: 'Helvetica Neue Light Std Light'*/
+
+.radio-container
+  font-size: 20px
