--- a/assets/css/4-pages/_edit.sass
+++ b/assets/css/4-pages/_edit.sass
@@ -2,6 +2,10 @@
   max-width: 300px
 
 .form-text
+  /*font-family: 'Steelfish Bold'*/
+  font-family: 'Oswald', sans-serif
+  line-height: 20px
+  font-size: 20px
   color: #eee
 
 .radio-container
@@ -15,10 +19,11 @@
 
   textarea
     border-radius: 5px
+    margin-bottom: 15px
 
 .file-container
   margin-bottom: 20px
-  
+
 .center-form
 
   .radio-container
