--- a/assets/css/4-pages/_profile.sass
+++ b/assets/css/4-pages/_profile.sass
@@ -57,5 +57,11 @@
 
   img
     height: 150px
+  p
+    //font-family: 'Steelfish Bold'
+    font-family: sans-serif
+    font-size: 20px
+
+
 .gall-back:hover
   opacity: 1
