--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -8,9 +8,9 @@
 
 
 // 2 - BASICS
-@import '2-basics/body-element'
 @import '2-basics/links'
 @import '2-basics/layouts'
+@import '2-basics/overall'
 //@import '2-basics/typography'
 //@import '2-basics/selection-colors'
 
@@ -24,6 +24,7 @@
 
 
 // 4 - PAGES
+@import '4-pages/about'
 @import '4-pages/edit'
 @import '4-pages/gallery'
 @import '4-pages/profile'
