--- a/assets/css/2-basics/_overall.sass
+++ b/assets/css/2-basics/_overall.sass
@@ -10,7 +10,8 @@ body
   padding-bottom: 6rem
   font-size: 14px
   line-height: 1.6
-  font-family: 'Oswald', sans-serif
+  font-family: 'Steelfish Bold', 'Oswald', sans-serif
+  //font-family: 'Steelfish Bold', sans-serif
   color: #666
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
@@ -18,6 +19,9 @@ body
 .container-fluid
   display: block
   height: 100%
+
+p, a
+  font-family: sans-serif
 
 footer
   background-color: #191919
@@ -27,4 +31,10 @@ footer
   bottom: 0
   left: 0
   padding: 1rem
-  text-align: center
+  text-align: right
+
+  p
+    margin-right: 20px
+
+    a
+      font-size: 20px
