Questions and Files
Added a File Upload along with the Image Upload.
Added little question bubbles for clarifying and giving examples to our
applicants.

--- a/assets/css/4-pages/_edit.sass
+++ b/assets/css/4-pages/_edit.sass
@@ -39,3 +39,11 @@
   background-color: #eee
   margin: 0 auto
   margin-bottom: 20px
+
+
+.directive-box
+  text-align: left
+  padding: 10px
+
+  em
+    font-size: 12px
