--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -542,6 +542,39 @@ textarea {
   }
 }
 
+.q-box {
+  background-color: #777;
+  border-radius: 10px;
+  cursor: pointer;
+  height: 25px;
+  width: 25px;
+  text-align: left;
+  overflow: hidden;
+  margin-top: -15px;
+  margin-bottom: 10px;
+}
+
+.q-box p {
+  color: #eee;
+  font-size: 12px;
+}
+
+.q-mark {
+  display: block;
+  position: absolute;
+  margin-top: 4px;
+  margin-left: 9px;
+}
+
+.big {
+  height: 125px;
+  width: 300px;
+}
+
+.q-explain {
+  padding: 10px;
+}
+
 .container-fluid {
   padding: 0;
 }
@@ -678,6 +711,15 @@ video {
   background-color: #eee;
   margin: 0 auto;
   margin-bottom: 20px;
+}
+
+.directive-box {
+  text-align: left;
+  padding: 10px;
+}
+
+.directive-box em {
+  font-size: 12px;
 }
 
 .gallery {
