Update the Update
Now Update.php updates both the image file and the document file.

Also I added the necessary fonts for Davenport’s brand. Because of
copyright and use questions, I didn’t commit them here.

Finally, little odds and ends regarding style and other elements were
taken care of along the way.

Now I’ll integrate the login, register, and session scripts I need to
make each user’s experience specific to them.

--- a/assets/css/1-tools/_fonts.scss
+++ b/assets/css/1-tools/_fonts.scss
@@ -1,13 +1,9 @@
 @font-face {
   font-family: 'Steelfish Bold';
-  src: url('Davenport-Steelfish-Bold.otf') format('opentype');
-  font-style: normal;
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue Light Std Light';
-  src: url('HelveticaNeueLTStd-Lt.otf') format('opentype');
+  src: url('steelfish_bd-webfont.eot'),
+       url('steelfish_bd-webfont.woff') format('woff'),
+       url('steelfish_bd-webfont.ttf') format('truetype'),
+       url('steelfish_bd-webfont.svg#Steelfish Bold') format('svg');
   font-style: normal;
   font-weight: normal;
 }
