--- a/assets/css/3-modules/_nav.sass
+++ b/assets/css/3-modules/_nav.sass
@@ -51,6 +51,10 @@
   li
     text-align: center
 
+    a
+      font-family: 'Steelfish Bold', 'Oswald', sans-serif
+
+
 
 #df-nav-name
   margin-left: 23px
