--- a/assets/css/4-pages/_gallery.sass
+++ b/assets/css/4-pages/_gallery.sass
@@ -77,7 +77,7 @@
     opacity: 0.5
 
     h2, p
-      font-family: 'Oswald'
+      font-family: 'Steelfish Bold', 'Oswald', sans-serif
       margin-top: 0
       color: #eee
       text-shadow: 2px 2px #222
