--- a/assets/css/3-modules/_authen.sass
+++ b/assets/css/3-modules/_authen.sass
@@ -27,6 +27,9 @@ input
       background-color: darken($du-p-red, 20%)
       transition: all 0.3s ease 0s
 
+input
+  &[type="file"]
+    font-size: 20px
 textarea
   font-size: 15px
   font-family: sans-serif
