--- a/assets/css/4-pages/_edit.sass
+++ b/assets/css/4-pages/_edit.sass
@@ -2,8 +2,7 @@
   max-width: 300px
 
 .form-text
-  /*font-family: 'Steelfish Bold'*/
-  font-family: 'Oswald', sans-serif
+  font-family: 'Steelfish Bold', 'Oswald', sans-serif
   line-height: 20px
   font-size: 20px
   color: #eee
@@ -32,6 +31,10 @@
   button
     width: 300px
 
+  em
+    font-family: sans-serif
+    font-size: 14px
+
 .img-upload
   height: 50px
   width: 60px
@@ -44,6 +47,8 @@
 .directive-box
   text-align: left
   padding: 10px
+  margin-top: -25px
 
   em
-    font-size: 12px
+    font-family: sans-serif
+    font-size: 14px
