--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -11,7 +11,7 @@
 @import '2-basics/links'
 @import '2-basics/layouts'
 @import '2-basics/overall'
-//@import '2-basics/typography'
+@import '2-basics/typography'
 //@import '2-basics/selection-colors'
 
 
