--- a/assets/css/3-modules/_cards.sass
+++ b/assets/css/3-modules/_cards.sass
@@ -48,7 +48,7 @@
 
   .corner-logo
     bottom: 20px
-    
+
   #buffer-card
     .center-title
       margin-left: 0
@@ -57,3 +57,13 @@
         display: block
       h1
         font-size: 25px
+
+#promo-box
+  text-align: left
+
+.promo-text
+  font-family: 'Steelfish Bold'
+  font-size: 20px
+
+  br
+    height: 25px
