--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -19,6 +19,7 @@
 @import '3-modules/authen'
 @import '3-modules/cards'
 @import '3-modules/nav'
+@import '3-modules/promobox'
 @import '3-modules/questions'
 @import '3-modules/video'
 //@import '3-modules/modal-profile'
