--- a/assets/css/3-modules/_nav.sass
+++ b/assets/css/3-modules/_nav.sass
@@ -1,3 +1,6 @@
+.nav li a
+  padding: 10px
+
 .navbar
   border: none
   background-color: $du-n-70
@@ -54,24 +57,16 @@
     a
       font-family: 'Steelfish Bold', 'Oswald', sans-serif
 
-
-
 #df-nav-name
-  margin-left: 23px
   color: #eee
   background-color: darken($du-p-red, 10%)
 
 .nav-it .short-logo
   display: none
 
-
-
-@media (max-width: 580px)
+@media (max-width: 800px)
   .nav-it .long-logo
     display: none
 
   .nav-it .short-logo
     display: inline
-
-  #df-nav-name
-    margin-left: 0
