--- a/assets/css/3-modules/_promobox.sass
+++ b/assets/css/3-modules/_promobox.sass
@@ -1,18 +1,22 @@
 .promo-box
-  height: 125px
-  width: 320px
+  height: 80px
+  width: 220px
   position: fixed
-  bottom: 0
-  right: 0
+  bottom: 3px
+  left: 3px
   z-index: 1
-  background-color: rgba(0, 0, 0, 1)
+  background-color: rgb(0, 0, 0)
+  opacity: 0.8
   text-align: center
   border-radius: 5px
 
+.promo-box:hover
+  opacity: 1
+
 .promo-text-box
   margin-bottom: 5px
-  
+
 #promo-box-footer
   h3, p
-    padding: 10px
+    padding: 0
     margin: 0
