Resize and Retouch
Gave some images some love here and there. Resizing and getting rid of
old photos or videos we don’t use anymore. Additionally, the footer and
alternative header is all set up.

And did I mention I went through and did a bunch of ADA work for our
visitors with screen readers?

--- a/assets/css/2-basics/_typography.sass
+++ b/assets/css/2-basics/_typography.sass
@@ -17,8 +17,9 @@ a, li a
   font-size: 24px
 
 label
-  color: rgba(0,0,0,0)
+  font-size: 0px
 
 .radio-label
   color: white
+  font-size: inherit
   display: block
